<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">手机卫士</string>
    <string name="version">版本号：</string>
    <string name="action_settings">Settings</string>
    <string name="widget01">手机防盗</string>
    <string name="setting_center">设置中心</string>
    <string name="autoUpdate">自动更新设置</string>
    <string name="autoUpdateOpen">自动更新没有开启</string>
    <string name="setPwd">设置密码</string>
    <string name="hint_input_pwd">请输入密码</string>
    <string name="hint_input_pwd_again">请再次输入密码</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="inputPwd">输入密码</string>
    <string name="choose_contact">选择联系人</string>

</resources>
