<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="260dp"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inputPwd"
        android:textColor="#66ff00"
        android:textSize="26sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="8dp"
        android:layout_marginTop="1dp"
        android:background="@drawable/devide_line" />

    <EditText
        android:id="@+id/et_normal_dialog_pwd"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_input_pwd"
        android:inputType="textPassword" />

    <LinearLayout
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bt_normal_dialog_ok"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/confirm"/>

        <Button
            android:id="@+id/bt_normal_dialog_cancel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/cancel"/>
    </LinearLayout>

</LinearLayout>