<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/setting_center"
        android:textColor="#66ff00"
        android:textSize="28sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="5dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/devide_line" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <TextView
            android:id="@+id/tv_setting_autoUpdate_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/autoUpdate"
            android:textSize="26sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_setting_autoUpdate_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_setting_autoUpdate_text"
            android:text="@string/autoUpdateOpen"
            android:textSize="14sp"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/cb_setting_autoUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:checked="false"/>
    </RelativeLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="5dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/devide_line" />
</LinearLayout>
